--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "crude.js",
   "scripts": {
+    "start": "node ./Scripts/crude.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
